--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,13 @@
+/*tags*/
+
 h1 {
     font-size: 50px;
     margin: 0;
+}
+
+hr {
+    border: 3px solid #ff6501;
+    width: 50%;
 }
 
 body {
@@ -9,38 +16,35 @@ body {
     text-align: center;
 }
 
-hr {
-    border: 3px solid #ff6501;
-    width: 50%;
-}
+/*clases*/
 
 .madagascar {
     height: 300px;
     margin: 30px;
-    width: 300px;
     overflow: hidden;
+    width: 300px;
 }
 
 .negative-colors {
+    filter: invert(100%);
     -ms-filter: invert(100%);
     -moz-filter: invert(100%);
     -o-filter: invert(100%);
     -webkit-filter: invert(100%);
-    filter: invert(100%);
 }
 
 .sepia {
+    filter: sepia(100%);
     -ms-filter: sepia(100%);
     -moz-filter: sepia(100%);
     -o-filter: sepia(100%);
     -webkit-filter: sepia(100%);
-    filter: sepia(100%);
 }
 
 .white-black {
+    filter: grayscale(100%);
     -ms-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
     -o-filter: grayscale(100%);
     -webkit-filter: grayscale(100%);
-    filter: grayscale(100%);
 }
